# lax

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: macos.yml  markdown.yml  rust.yml  yaml.yml
src/: argparser.rs  errors.rs  lib.rs  main.rs
tests/: test.rs
