[package]
name = "lax"
description = "A command-line argument substitution utility"
homepage = "https://github.com/Property404/lax"
repository = "https://github.com/Property404/lax"
license = "MIT OR Apache-2.0"
version = "0.4.0"
authors = ["Property404 <martinez.dagan@gmail.com>"]
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
globset = "0.4.9"
shellexpand = "3.0.0"
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.7"

[profile.release]
lto = "thin"
