[package]
name = "lax"
description = "A command-line argument substitution utility"
homepage = "https://github.com/Property404/lax"
repository = "https://github.com/Property404/lax"
license = "MIT OR Apache-2.0"
version = "0.4.1"
authors = ["Property404 <martinez.dagan@gmail.com>"]
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
globset = "0.4.10"
regex = "1.8.1"
shellexpand = "3.1.0"
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.11"

[profile.release]
lto = "thin"
