[package]
name = "lax"
description = "A command-line argument substitution utility"
homepage = "https://github.com/Property404/lax"
repository = "https://github.com/Property404/lax"
license = "MIT OR Apache-2.0"
version = "0.4.5"
authors = ["Property404 <DontEmailMeOrMySonEverAgain@example.com>"]
edition = "2021"
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
globset = "0.4"
regex = "1.9"
shellexpand = "3.1"
walkdir = "2.4"

[dev-dependencies]
assert_cmd = "2.0"

# Link-time optimized
[profile.lto]
inherits = "release"
lto = "fat"
strip = true
